[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Tuan Pham", email = "phamhoangtuan.it@gmail.com"},
]
dependencies = [
    "loguru>=0.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
lint = [
    "blue>=0.9.1",
    "mypy>=1.5.1",
    "ruff>=0.0.289",
]
test = [
    "pytest>=7.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "PL", ]
target-version = "py310"
